2012-10-03  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Support global debug flag

2012-05-06  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Raise version to 2.0.0
	* [TASK][DOC] Refactor the reST documentation

2012-05-02  Xavier Perseguers  <xavier@causal.ch>

	* [!!!][TASK] Remove code targeted as TYPO3 < 4.5.0
	* [FEATURE] Let user decide whether all service versions should be retrieved (slower)
	* [FEATURE] Automatically populate organization's website
	* [TASK] Communities should be sorted alphabetically

2012-05-01  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #36760: Extension only caches non-empty responses from WebService
	* [TASK] Optimize the configuration initialization
	* [BUGFIX] Invalid calculation of generation time
	* [TASK] Add WS debugging information

2012-04-30  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Add website for Lully

2012-04-28  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Return organization's website with the AJAX request
	* [TASK] #36685: Add a reference to the website of the organizations

2012-04-25  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] #34881: Update the list of communities

2012-04-24  Xavier Perseguers  <xavier@causal.ch>

	* [!!!][TASK] Update compatibility range for TYPO3 since v4.7 is now stable

2012-04-23  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] #34881: Update the list of organizations
	* [!!!][TASK] #36451: Rename organizations_geo.csv as organization.csv

2012-04-21  Xavier Perseguers  <xavier@causal.ch>

	* [FEATURE] #33795: Generate RDF file from provided services
	* [FEATURE] #33799: Automatic reference for published services
	* [TASK][DOC] #33796: Describe how to add reference to RDF in page header

2012-04-19  Xavier Perseguers  <xavier@causal.ch>

	* [BUGFIX] Invalid mime-type suggested

2012-04-05  Xavier Perseguers  <xavier@causal.ch>

	* [TASK] Add a link to download the generated RDF file
	* [TASK] Allow RDF to be generated for all versions of a service