@@ -1,4 +1,4 @@
-# customsubcategory=api=LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.subcategories.api; cat=basic/api; type=options[LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.wsdlVersion.oneZero=1.0,LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.wsdlVersion.twoZero=2.0]; label=LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.wsdlVersion
+# customsubcategory=api=LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.subcategories.api; cat=basic/api; type=options[LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.wsdlVersion.oneZero=1.0,LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.wsdlVersion.twoZero=2.0,LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.wsdlVersion.twoOne=2.1]; label=LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.wsdlVersion
 wsdlVersion=2.0
 
 	# cat=basic/api; type=options[LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.cacheLifetime.one_hour=3600,LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.cacheLifetime.six_hours=21600,LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.cacheLifetime.half_day=43200,LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.cacheLifetime.one_day=86400,LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.cacheLifetime.one_week=604800,LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.cacheLifetime.unlimited=0]; label=LLL:EXT:egovapi/Resources/Private/Language/locallang_db.xml:constants.cacheLifetime
