@@ -1,5 +1,6 @@
 2012-10-03  Xavier Perseguers  <xavier@causal.ch>
 
+	* [TASK] WebService 2.1 has been rolled-out
 	* [TASK] Support global debug flag
 
 2012-05-06  Xavier Perseguers  <xavier@causal.ch>
